--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="unapplied_changes">Unapplied Changes</string>
 
     <string name="unapplied_changes_desc">You have unapplied changes! Hit the checkmark FAB to apply them.</string>
+    <string name="apply_overlays_desc">Are you sure you want to apply?</string>
 
     <string name="enable_all">Enable All</string>
     <string name="disable_all">Disable All</string>
